# EMPIRE-Core

./: CMakeLists.txt  README.md
EMPIRE_API/: CMakeLists.txt
EMPIRE_API/doc/: Makefile  doxygenFile
EMPIRE_API/src/: ApiWrapperFromCppToC.cpp  CMakeLists.txt  ClientCommunication.cpp  ClientCommunication.h  ClientMetaDatabase.cpp  ClientMetaDatabase.h  Empire.cpp  Empire.h
EMPIRE_API/src/include/: CMakeLists.txt  EMPIRE_API.h  EMPIRE_API_Enum.h
Emperor/: CMakeLists.txt
Emperor/doc/: Makefile  doxygenFile
Emperor/src/: AbstractMesh.cpp  AbstractMesh.h  CMakeLists.txt  ClientCode.cpp  ClientCode.h  ConnectionIO.cpp  ConnectionIO.h  DataField.cpp  DataField.h  Emperor.cpp  Emperor.h  FEMesh.cpp  FEMesh.h  MPIErrorHandling.cpp  MPIErrorHandling.h  MetaDataStructures.h  MetaDatabase.cpp  MetaDatabase.h  ServerCommunication.cpp  ServerCommunication.h  Signal.cpp  Signal.h  main.cpp
Emperor/src/IGAKernel/: AbstractBSplineBasis1D.h  AbstractBSplineBasis2D.h  AbstractIGABasis.h  AbstractIGAPatch.h  AbstractPoint.h  BSplineBasis1D.cpp  BSplineBasis1D.h  BSplineBasis2D.cpp  BSplineBasis2D.h  IGAControlPoint.h  IGAMath.cpp  IGAMath.h  IGAMesh.cpp  IGAMesh.h  IGAPatch1D.cpp  IGAPatch1D.h  IGAPatch2D.cpp  IGAPatch2D.h  IGAPatchSurface.cpp  IGAPatchSurface.h  IGAPatchSurfaceTrimming.cpp  IGAPatchSurfaceTrimming.h  NurbsBasis1D.cpp  NurbsBasis1D.h  NurbsBasis2D.cpp  NurbsBasis2D.h
Emperor/src/couplingAlgorithm/: AbstractCouplingAlgorithm.cpp  AbstractCouplingAlgorithm.h  Aitken.cpp  Aitken.h  CMakeLists.txt  ConstantRelaxation.cpp  ConstantRelaxation.h  IJCSA.cpp  IJCSA.h  Residual.cpp  Residual.h
Emperor/src/couplingLogic/: AbstractCouplingLogic.cpp  AbstractCouplingLogic.h  CMakeLists.txt  Connection.cpp  Connection.h  ConvergenceChecker.cpp  ConvergenceChecker.h  CouplingLogicSequence.h  IterativeCouplingLoop.cpp  IterativeCouplingLoop.h  OptimizationLoop.cpp  OptimizationLoop.h  TimeStepLoop.cpp  TimeStepLoop.h
Emperor/src/extrapolating/: AbstractExtrapolator.cpp  AbstractExtrapolator.h  GenMSExtrapolator.cpp  GenMSExtrapolator.h  LinearExtrapolator.cpp  LinearExtrapolator.h  SimpleExtrapolator.cpp  SimpleExtrapolator.h
Emperor/src/fileIO/: GiDFileIO.cpp  GiDFileIO.h  GmshFileIO.cpp  GmshFileIO.h  MatlabIGAFileIO.cpp  MatlabIGAFileIO.h  meshIO.cpp  meshIO.h
Emperor/src/filtering/: AbstractFilter.cpp  AbstractFilter.h  AdditionFilter.cpp  AdditionFilter.h  CopyFilter.cpp  CopyFilter.h  CouplingAlgorithmFilter.cpp  CouplingAlgorithmFilter.h  DataFieldIntegrationFilter.cpp  DataFieldIntegrationFilter.h  ExtrapolatingFilter.cpp  ExtrapolatingFilter.h  LocationFilter.cpp  LocationFilter.h  MappingFilter.cpp  MappingFilter.h  ScalingFilter.cpp  ScalingFilter.h  SetFilter.cpp  SetFilter.h
Emperor/src/include/: EMPEROR_Enum.h
Emperor/src/mapping/: AbstractMapper.h  BarycentricInterpolationMapper.cpp  BarycentricInterpolationMapper.h  DataFieldIntegration.cpp  DataFieldIntegration.h  IGAMortarMapper.cpp  IGAMortarMapper.h  IGAMortarMath.cpp  IGAMortarMath.h  MapperAdapter.cpp  MapperAdapter.h  MortarMapper.cpp  MortarMapper.h  MortarMath.cpp  MortarMath.h  NearestElementMapper.cpp  NearestElementMapper.h  NearestNeighborMapper.cpp  NearestNeighborMapper.h
Emperor/src/output/: DataOutput.cpp  DataOutput.h  Message.cpp  Message.h  PseudoCodeOutput.cpp  PseudoCodeOutput.h
Emperor/src/tools/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.h  AuxiliaryParameters.cpp  AuxiliaryParameters.cpp.in  AuxiliaryParameters.h  MathLibrary.cpp  MathLibrary.h  MklRedefine.c  TriangulatorAdaptor.cpp  TriangulatorAdaptor.h  clipper.hpp  polypartition.h
Emperor/testMapper/: CMakeLists.txt  TestMapper.cpp  TestMapper.h  main.cpp
Emperor/testUnit/: CMakeLists.txt  ConnectionIOSetup.h  ProgressOutputter.h  TestClientCode.cpp  TestConnection.cpp  TestDataField.cpp  TestEmperor.cpp  TestFEMesh.cpp  TestMetaDatabase.cpp  TestSignal.cpp  main.cpp
Emperor/testUnit/IGAKernel/: TestBSplineBasis1D.cpp  TestBSplineBasis2D.cpp  TestIGAMesh.cpp  TestIGAMortarTypeProjectionTube.cpp  TestIGAPatch1D.cpp  TestIGAPatch2D.cpp  TestIGAPatchSurface.cpp  TestNurbsBasis1D.cpp  TestNurbsBasis2D.cpp  TestProjectionSemiSphere.cpp  TestProjectionSemiSphereFine.cpp
Emperor/testUnit/couplingAlgorithm/: ComaAitken.h  TestAitken.cpp  TestConstantRelaxation.cpp  TestRelaxationMethods.cpp  TestResidual.cpp
Emperor/testUnit/couplingLogic/: CMakeLists.txt  TestConvergenceChecker.cpp  TestLoops.cpp
Emperor/testUnit/extrapolating/: TestExtrapolator.cpp
Emperor/testUnit/files/: CMakeLists.txt  hybrid.msh  hybrid.res  inputFileOfTestMetaDatabase.xml
Emperor/testUnit/filtering/: TestAdditionFilter.cpp  TestCopyFilter.cpp  TestLocationFilter.cpp  TestMappingFilter.cpp
Emperor/testUnit/mapping/: TestIGAMortarMapperCube.cpp  TestIGAMortarMapperCylinder.cpp  TestIGAMortarMapperMultiPatch.cpp  TestIGAMortarMapperMultiPatchPlanarSurface.cpp  TestIGAMortarMapperTube.cpp  TestIGAMortarMath.cpp  TestMappers.cpp  TestMapping.cpp  TestMappingMultiplePartitions.cpp  TestMappingUnSymmetric.cpp  TestMortarMapper.cpp  TestMortarMath.cpp
Emperor/testUnit/output/: TestGiDFileIO.cpp  TestGmshFileIO.cpp  TestMessage.cpp
Emperor/testUnit/tools/: CMakeLists.txt  TestMathLibrary.cpp
cmake/modules/: FindMKL.cmake
configure/: bashrc_config  batch_config
eclipseSettings/: codeTemplates.xml  export.xml
interface/fortran90/: m_empire_api.f90
interface/matlab/: Makefile  include_GCC.mk  include_ICC.mk  mexFunction.map
interface/matlab/GiDFileIO/: Makefile
interface/matlab/src/: EMPIRE_API_Connect.cpp  EMPIRE_API_Disconnect.cpp  EMPIRE_API_getUserDefinedText.cpp  EMPIRE_API_recvConvergenceSignal.cpp  EMPIRE_API_recvDataField.cpp  EMPIRE_API_recvSignal_double.cpp  EMPIRE_API_sendConvergenceSignal.cpp  EMPIRE_API_sendDataField.cpp  EMPIRE_API_sendIGAMesh.cpp  EMPIRE_API_sendIGAPatch.cpp  EMPIRE_API_sendMesh.cpp  EMPIRE_API_sendSignal_double.cpp  GiD_FileIO_readDotMsh.cpp  HelperFunctions.h
xmlSchema/: FSIExample.xml  FSIOptimizationExample.xml  clientInputExample.xml  emperorInput.xsd  emperorInputExample.xml
